...
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@+id/text_rate_shil"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnToWallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="wallet"
        app:layout_constraintBottom_toTopOf="@+id/btnToBank"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnToBank"
        android:layout_width="match_parent"
...
